--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <p class="masthead-subheading font-weight-light mb-0">Construction Field</p>
                 <nav>
                     <a href="https://www.youtube.com/channel/UCPbDP8eqd_jk322NNMvYZ0g/featured"><i class="fab fa-youtube"></i></a>
-                    <a href="https://www.facebook.com/nkrisssna"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://500px.com/p/niraula300"><i class="fab fa-500PX"></i></a>
+                    <a href="https://www.facebook.com/0kisn"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://500px.com/p/0kisn"><i class="fab fa-500PX"></i></a>
                 </nav>
               
                
