--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
         <!-- Masthead-->
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
+                <nav>
+                    <ul>
+                        <li><a herf="#">Home</a></li>
+                        <li><a herf="#">News</a></li>
+                        <li><a herf="#">Notices</a></li>
+                    </ul>
+                </nav>
                 <!-- Masthead Avatar Image-->
                 <img class="masthead-avatar mb-5" src="brp.jpg" alt="..." />
                 <!-- Masthead Heading-->
