--- a/index.html
+++ b/index.html
@@ -1,72 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Krishna Niraula Official Website</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-    </head>
-    <body id="page-top">
-        <!-- Masthead-->
-        <header class="masthead bg-primary text-white text-center">
-            <div class="container d-flex align-items-center flex-column">
-                <nav>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#" id="news-link">News</a></li>
-                        <li><a href="#">Notices</a></li>
-                    </ul>
-                </nav>
-                <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="brp.jpg" alt="..." />
-                <!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase mb-0">Krishna Niraula</h1>
-                <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Construction Field</p>
-            </div>
-        </header>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Krishna Niraula Official Website</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+    <link href="css/styles.css" rel="stylesheet" />
+    <!-- Custom CSS for cards -->
+    <style>
+        .card-container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 1rem;
+            padding: 1rem;
+        }
+        .card {
+            background-color: white;
+            border: 1px solid #ddd;
+            border-radius: 0.5rem;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 300px;
+            overflow: hidden;
+            text-align: left;
+        }
+        .card-content {
+            padding: 1rem;
+        }
+        .card-title {
+            font-size: 1.25rem;
+            margin-bottom: 0.5rem;
+            font-weight: bold;
+        }
+        .card-description {
+            font-size: 1rem;
+            color: #555;
+            max-height: 6rem; /* Approx 5 lines */
+            overflow: hidden;
+            text-overflow: ellipsis;
+            line-height: 1.2rem; /* Line height to control the number of lines */
+        }
+    </style>
+</head>
+<body id="page-top">
+    <!-- Masthead -->
+    <header class="masthead bg-primary text-white text-center">
+        <div class="container d-flex align-items-center flex-column">
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#" id="news-link">News</a></li>
+                    <li><a href="#">Notices</a></li>
+                </ul>
+            </nav>
+            <!-- Masthead Avatar Image -->
+            <img class="masthead-avatar mb-5" src="brp.jpg" alt="..." />
+            <!-- Masthead Heading -->
+            <h1 class="masthead-heading text-uppercase mb-0">Krishna Niraula</h1>
+            <!-- Masthead Subheading -->
+            <p class="masthead-subheading font-weight-light mb-0">Construction Field</p>
+        </div>
+    </header>
 
-        <!-- Footer-->
-        <footer class="footer bg-dark text-white text-center">
-            <div class="container">
-                <nav>
-                    <ul>
-                       <li><a href="https://www.youtube.com/channel/UCPbDP8eqd_jk322NNMvYZ0g/featured"><i class="fab fa-youtube"></i></a></li> 
-                       <li><a href="https://www.facebook.com/0kisn"><i class="fab fa-facebook-f"></i></a></li>
-                       <li><a href="https://500px.com/p/0kisn"><i class="fab fa-500PX"></i></a></li> 
-                    </ul>
-                </nav> 
-                <p>© 2021 Krishna Niraula</p>
-            </div>
-        </footer>
+    <!-- News Section -->
+    <section id="news-section" class="container">
+        <h2 class="text-center mb-4">Latest News</h2>
+        <div id="news-container" class="card-container">
+            <!-- News cards will be injected here -->
+        </div>
+    </section>
 
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    <!-- Footer -->
+    <footer class="footer bg-dark text-white text-center">
+        <div class="container">
+            <nav>
+                <ul>
+                   <li><a href="https://www.youtube.com/channel/UCPbDP8eqd_jk322NNMvYZ0g/featured"><i class="fab fa-youtube"></i></a></li> 
+                   <li><a href="https://www.facebook.com/0kisn"><i class="fab fa-facebook-f"></i></a></li>
+                   <li><a href="https://500px.com/p/0kisn"><i class="fab fa-500PX"></i></a></li> 
+                </ul>
+            </nav> 
+            <p>© 2021 Krishna Niraula</p>
+        </div>
+    </footer>
 
-        <!-- JavaScript to handle News link -->
-        <script>
-            document.getElementById('news-link').addEventListener('click', function(event) {
-                event.preventDefault();
-                const query = 'ठेक्का OR आयोजना OR निर्माण OR सिलबन्दी OR बोलपत्र -महोत्सव -उत्सव -प्रतियोगिता -प्रदर्शनी';
-                const googleSearchUrl = `https://www.google.com/search?q=${encodeURIComponent(query)}&hl=ne`;
-                window.location.href = googleSearchUrl;
-            });
-        </script>
-    </body>
+    <!-- Bootstrap core JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS -->
+    <script src="js/scripts.js"></script>
+    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+
+    <!-- JavaScript to handle News feed -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const feedUrls = [
+                'https://www.google.com/alerts/feeds/17248606588752154671/17646417480729972491',
+                'https://www.google.com/alerts/feeds/06313983183609550648/13722836873792678019',
+                'https://www.google.com/alerts/feeds/17248606588752154671/15089319890734284885',
+                'https://www.google.com/alerts/feeds/06313983183609550648/16120492411931428893'
+            ];
+            const excludeWords = ['महोत्सव', 'उत्सव', 'प्रतियोगिता', 'प्रदर्शनी'];
+            const container = document.getElementById('news-container');
+
+            async function fetchAndProcessFeeds() {
+                for (const url of feedUrls) {
+                    try {
+                        const response = await fetch(url);
+                        const text = await response.text();
+                        const data = new window.DOMParser().parseFromString(text, "text/xml");
+                        const items = data.querySelectorAll("item");
+                        items.forEach(item => {
+                            const title = item.querySelector("title").textContent;
+                            const description = item.querySelector("description").textContent;
+                            const link = item.querySelector("link").textContent;
+
+                            // Exclude items containing certain words
+                            if (!excludeWords.some(word => title.includes(word) || description.includes(word))) {
+                                const card = document.createElement('div');
+                                card.classList.add('card');
+
+                                // Truncate description to fit 5 lines
+                                const maxLength = 1000; // Adjust as necessary to ensure 5 lines
+                                const truncatedDescription = description.length > maxLength
+                                    ? description.slice(0, maxLength) + '...'
+                                    : description;
+
+                                const cardContent = `
+                                    <a href="${link}" target="_blank">
+                                        <div class="card-content">
+                                            <h3 class="card-title">${title}</h3>
+                                            <p class="card-description">${truncatedDescription}</p>
+                                        </div>
+                                    </a>
+                                `;
+
+                                card.innerHTML = cardContent;
+                                container.appendChild(card);
+                            }
+                        });
+                    } catch (error) {
+                        console.error('Error fetching RSS feed:', error);
+                    }
+                }
+            }
+
+            fetchAndProcessFeeds();
+        });
+    </script>
+</body>
 </html>
