--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="Official website of Krishna Niraula" />
+    <meta name="author" content="Krishna Niraula" />
     <title>Krishna Niraula Official Website</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
@@ -14,7 +14,7 @@
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
-    <!-- Core theme CSS (includes Bootstrap)-->
+    <!-- Core theme CSS -->
     <link href="css/style.css" rel="stylesheet" />
 </head>
 <body id="page-top">
@@ -29,7 +29,7 @@
                 </ul>
             </nav>
             <!-- Masthead Avatar Image-->
-            <img class="masthead-avatar mb-5" src="assets/img/avatars.svg" alt="..." />
+            <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="Avatar of Krishna Niraula" />
             <!-- Masthead Heading-->
             <h1 class="masthead-heading text-uppercase mb-0">Krishna Niraula</h1>
             <!-- Masthead Subheading-->
