--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Official website of Krishna Niraula" />
-    <meta name="author" content="Krishna Niraula" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
     <title>Krishna Niraula Official Website</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
@@ -14,7 +14,7 @@
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
-    <!-- Core theme CSS -->
+    <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
 </head>
 <body id="page-top">
@@ -29,7 +29,7 @@
                 </ul>
             </nav>
             <!-- Masthead Avatar Image-->
-            <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="Avatar of Krishna Niraula" />
+            <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="Avatar" />
             <!-- Masthead Heading-->
             <h1 class="masthead-heading text-uppercase mb-0">Krishna Niraula</h1>
             <!-- Masthead Subheading-->
@@ -49,7 +49,7 @@
                 <ul>
                     <li><a href="https://www.youtube.com/channel/UCPbDP8eqd_jk322NNMvYZ0g/featured"><i class="fab fa-youtube"></i></a></li> 
                     <li><a href="https://www.facebook.com/0kisn"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="https://500px.com/p/0kisn"><i class="fab fa-500PX"></i></a></li> 
+                    <li><a href="https://500px.com/p/0kisn"><i class="fab fa-500px"></i></a></li> 
                 </ul>
             </nav> 
             <p>© 2021 Krishna Niraula</p>
@@ -59,7 +59,7 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/script.js"></script>
+    <script src="js/scripts.js"></script>
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 </html>
