--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@
         </ul>
       </nav> 
       <p>© 2021 Krishna Niraula</p>
+      <div class="link-list">
+        <h2>Helpful Links</h2>
+        <ul class="link-grid">
+          <li><a href="https://ppmo.gov.np/">PPMO</a></li>
+          <li><a href="https://www.ocr.gov.np/">OCR</a></li>
+          <li><a href="https://ird.gov.np/">IRD</a></li>
+          <li><a href="https://www.nrb.org.np/">NRB</a></li>
+          <li><a href="https://noc.org.np/diesel">Diesel Rate</a></li>
+          <li><a href="https://www.dor.gov.np/home">DOR</a></li>
+        </ul>
+      </div>
     </div>
   </footer>
 
