--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
   </header>
 
   <section id="news-container" class="container mt-5">
+    <section id="notices" class="container mt-5">
+      <h2>Notices</h2>
+      <div id="notice-container"></div>
     </section>
 
   <footer class="footer bg-dark text-white text-center">
