--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
   <link href="css/styles.css" rel="stylesheet" />
+  <script src="js/notice.js"></script>
 </head>
 <body id="page-top">
   <header class="masthead bg-primary text-white text-center">
@@ -30,10 +31,14 @@
   </header>
 
   <section id="news-container" class="container mt-5">
-    <section id="notices" class="container mt-5">
-      <h2>Notices</h2>
-      <div id="notice-container"></div>
-    </section>
+  <h2>News</h2>
+  <div id="news-items"></div>
+</section>
+
+<section id="notices" class="container mt-5">
+  <h2>Notices</h2>
+  <div id="notice-container"></div>
+</section>
 
   <footer class="footer bg-dark text-white text-center">
     <div class="container">
