--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
   <link href="css/styles.css" rel="stylesheet" />
-  <script src="js/notice.js"></script>
 </head>
 <body id="page-top">
   <header class="masthead bg-primary text-white text-center">
     <div class="container d-flex align-items-center flex-column">
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="#home">Home</a></li>
           <li><a href="#news">News</a></li>
-          <li><a href="#">Notices</a></li>
+          <li><a href="#notices">Notices</a></li>
         </ul>
       </nav>
       <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="Avatar" />
@@ -30,15 +29,20 @@
     </div>
   </header>
 
-  <section id="news-container" class="container mt-5">
-  <h2>News</h2>
-  <div id="news-items"></div>
-</section>
+  <section id="home" class="container mt-5">
+    <h2>Welcome!</h2>
+    <p>This is the home section of my website. You can add information about yourself, your career, or anything you'd like visitors to see first.</p>
+  </section>
 
-<section id="notices" class="container mt-5">
-  <h2>Notices</h2>
-  <div id="notice-container"></div>
-</section>
+  <section id="news-container" class="container mt-5">
+    <h2>News</h2>
+    <div id="news-items"></div>
+  </section>
+
+  <section id="notices" class="container mt-5">
+    <h2>Notices</h2>
+    <div id="notice-container"></div>
+  </section>
 
   <footer class="footer bg-dark text-white text-center">
     <div class="container">
@@ -50,9 +54,9 @@
         </ul>
       </nav> 
       <p>© 2021 Krishna Niraula</p>
-      <div class="link-list">
+      <div class="link-grid">
         <h2>Helpful Links</h2>
-        <ul class="link-grid">
+        <ul>
           <li><a href="https://ppmo.gov.np/">PPMO</a></li>
           <li><a href="https://www.ocr.gov.np/">OCR</a></li>
           <li><a href="https://ird.gov.np/">IRD</a></li>
