--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <section id="home" class="container mt-5">
     <h2>Welcome!</h2>
-    <p>This is the home section of my website. You can add information about yourself, your career, or anything you'd like visitors to see first.</p>
+    <p>This is the home section of my website. </p>
   </section>
 
   <section id="news-container" class="container mt-5">
