--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
     <p>This is the home section of my website.</p>
   </section>
 
-  // <section id="news-container" class="container mt-5">
-  //  <h2>News</h2>
-  //  <div id="news-items"></div>
-  //</section>
+   <section id="news-container" class="container mt-5">
+    <h2>News</h2>
+    <div id="news-items"></div>
+  </section>
 
-  //<section id="notices" class="container mt-5">
-  //  <h2>Notices</h2>
-  //  <div id="notice-container"></div>
- // </section>
+  <section id="notices" class="container mt-5">
+   <h2>Notices</h2>
+    <div id="notice-container"></div>
+  </section>
 
   <footer class="footer bg-dark text-white text-center">
     <div class="container">
