--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Masthead (Updated: Removed extra News and Notices text) -->
     <header class="masthead">
-        <img src="avatar.png" alt="Avatar" class="masthead-avatar">
+        <img src="assets/img/avataaars.svg" alt="Avatar" class="masthead-avatar">
         <h1>Krishna Niraula</h1>
         <p>Construction Field</p>
     </header>
