--- a/index.html
+++ b/index.html
@@ -1,74 +1,58 @@
-<!doctype html>
-<html>
+
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Simple Theme</title>
-<link href="css/multiColumnTemplate.css" rel="stylesheet" type="text/css">
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Krishna Niraula</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<div class="container">
-  <header>
-    <div class="primary_header">
-      <h1 class="title">Krishna</h1>
-    </div>
-    <nav class="secondary_header" id="menu">
-      <ul>
-        <li>ABOUT</li>
-        <li>WORK</li>
-        <li>PORTFOLIO</li>
-        <li>SERVICES</li>
-        <li>CLIENTS</li>
-        <li>CONTACT</li>
-      </ul>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#news">News</a></li>
+            <li><a href="#notices">Notices</a></li>
+        </ul>
     </nav>
-  </header>
-  <section>
-    <h2 class="noDisplay">Main Content</h2>
-    <article class="left_article">
-      <h3>content heading</h3>
-      <p>Test test test</p>
-    </article>
-    <aside class="right_article"><img src="assets/img/55.jpg" alt="" width="3472" height="4640" class="placeholder"/> </aside>
-  </section>
-  <div class="row">
-    <div class="columns">
-      <p class="thumbnail_align"> <img src="assets/img/1.png" alt="" class="thumbnail"/> </p>
-      <h4>Name 1</h4>
-      <p>हतपतको काम लतपत.</p>
-    </div>
-    <div class="columns">
-      <p class="thumbnail_align"> <img src="assets/img/2.png" alt="" class="thumbnail"/> </p>
-      <h4>Name 2</h4>
-      <p>अक्सर आँखा त्यही मान्छेले खोलिदिने गर्छ जसलाइ हामी आँखा चिम्लेर बिस्वास गर्ने गर्छौं !</p>
-    </div>
-    <div class="columns">
-      <p class="thumbnail_align"> <img src="assets/img/3.png" alt="" class="thumbnail"/> </p>
-      <h4>Title</h4>
-      <p>Nothing will work unless you do.</p>
-    </div>
-    <div class="columns">
-      <p class="thumbnail_align"> <img src="assets/img/4.png" alt="" class="thumbnail"/> </p>
-      <h4>TITLE</h4>
-      <p>Its your turn now.</p>
-    </div>
-  </div>
-  <div class="row blockDisplay"></div>
-  <div class="social">
-	  <p class="social"><a href="https://www.facebook.com/0kisn/">Facebook</a></p>
-	  <p class="social"><a href="https://www.youtube.com/@sankhatro/">Youtube</a></p>
-      <p class="social"><a href="https://500px.com/p/0kisn?view=photos/">500Px</a></p>
-  </div>
-  <footer class="secondary_header footer">
-    <div class="copyright">&copy;202<strong>4- Krishna</strong></div>
-  </footer>
-</div>
+
+    <!-- Masthead (Updated: Removed extra News and Notices text) -->
+    <header class="masthead">
+        <img src="assets/img/avataaars.svg" alt="Avatar" class="masthead-avatar">
+        <h1>Krishna Niraula</h1>
+        <p>Construction Field</p>
+    </header>
+
+    <!-- Main Content -->
+    <section id="news">
+        <div class="news-card">
+            <h3>News Title</h3>
+            <p>This is a short description of the news.</p>
+        </div>
+    </section>
+
+    <section id="notices">
+        <div class="notice-card">
+            <h3>Notice Title</h3>
+            <p>This is a short description of the notice.</p>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <nav>
+            <ul class="link-grid">
+                <li><a href="https://www.ppmo.gov.np/">PPMO</a></li>
+                <li><a href="https://www.ocr.gov.np/">OCR</a></li>
+                <li><a href="https://www.ird.gov.np/">IRD</a></li>
+                <li><a href="https://www.nrb.org.np/">NRB</a></li>
+                <li><a href="https://noc.org.np/diesel">Diesel Rate</a></li>
+                <li><a href="https://www.dor.gov.np/home">DOR</a></li>
+            </ul>
+        </nav>
+        <p>© 2021 Krishna Niraula</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
