--- a/index.html
+++ b/index.html
@@ -20,25 +20,10 @@
     <header class="masthead">
         <img src="assets/img/avataaars.svg" alt="Avatar" class="masthead-avatar">
         <h1>Krishna Niraula</h1>
-        <p>Construction Field</p>
+        <p>Personal Space</p>
     </header>
 
-    <!-- Main Content -->
-    <section id="news">
-        <div class="news-card">
-            <h3>News Title</h3>
-            <p>This is a short description of the news.</p>
-        </div>
-    </section>
-
-    <section id="notices">
-        <div class="notice-card">
-            <h3>Notice Title</h3>
-            <p>This is a short description of the notice.</p>
-        </div>
-    </section>
-
-    <!-- Footer -->
+    <!-- Main Content --><!-- Footer -->
     <footer class="footer">
         <nav>
             <ul class="link-grid">
@@ -53,6 +38,6 @@
         <p>© 2021 Krishna Niraula</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
