--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,14 +15,22 @@
         </ul>
     </nav>
 
-    <!-- Masthead (Updated: Removed extra News and Notices text) -->
+    <!-- Masthead -->
     <header class="masthead">
         <img src="assets/img/avataaars.svg" alt="Avatar" class="masthead-avatar">
         <h1>Krishna Niraula</h1>
         <p>Personal Space</p>
     </header>
 
-    <!-- Main Content --><!-- Footer -->
+    <!-- News Section -->
+    <section id="news" class="news-section">
+        <h2>Latest News</h2>
+        <div id="news-content">
+            <!-- Filtered news articles will appear here -->
+        </div>
+    </section>
+
+    <!-- Footer -->
     <footer class="footer">
         <nav>
             <ul class="link-grid">
