--- a/index.html
+++ b/index.html
@@ -15,20 +15,27 @@
         </ul>
     </nav>
 
-    <!-- Masthead -->
+    <!-- Masthead (Updated: Removed extra News and Notices text) -->
     <header class="masthead">
         <img src="assets/img/avataaars.svg" alt="Avatar" class="masthead-avatar">
         <h1>Krishna Niraula</h1>
         <p>Personal Space</p>
     </header>
 
-    <!-- News Section -->
-    <section id="news" class="news-section">
-        <h2>Latest News</h2>
-        <div id="news-content">
-            <!-- Filtered news articles will appear here -->
-        </div>
-    </section>
+    <!-- Main Content -->
+    <main>
+        <!-- News Section -->
+        <section id="news">
+            <h2>Latest News</h2>
+            <!-- News content will be injected here by JavaScript -->
+        </section>
+
+        <!-- Notices Section -->
+        <section id="notices">
+            <h2>Notices</h2>
+            <!-- Notices content will be injected here by JavaScript -->
+        </section>
+    </main>
 
     <!-- Footer -->
     <footer class="footer">
@@ -45,6 +52,6 @@
         <p>© 2021 Krishna Niraula</p>
     </footer>
 
-    <script src="js/scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
