--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
         <p>© 2021 Krishna Niraula</p>
     </footer>
 
-    <script src="scripts.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
