--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#news">News</a></li>
-            <li><a href="#notices">Notices</a></li>
+            <li><a href="news">News</a></li>
+            <li><a href="#">Notices</a></li>
         </ul>
     </nav>
 
