--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="news">News</a></li>
+            <li><a href="#news">News</a></li>
             <li><a href="#">Notices</a></li>
         </ul>
     </nav>
 
-    <!-- Masthead (Updated: Removed extra News and Notices text) -->
+    <!-- Masthead -->
     <header class="masthead">
         <img src="assets/img/avataaars.svg" alt="Avatar" class="masthead-avatar">
         <h1>Krishna Niraula</h1>
@@ -27,7 +27,6 @@
         <!-- News Section -->
         <section id="news">
             <!-- News content will be injected here by JavaScript -->
-       
         </section>
     </main>
 
