--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#news">News</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="news.html">News</a></li>
             <li><a href="#">Notices</a></li>
         </ul>
     </nav>
 
-    <!-- Masthead -->
+    <!-- Masthead (Updated: Removed extra News and Notices text) -->
     <header class="masthead">
         <img src="assets/img/avataaars.svg" alt="Avatar" class="masthead-avatar">
         <h1>Krishna Niraula</h1>
@@ -24,10 +24,7 @@
 
     <!-- Main Content -->
     <main>
-        <!-- News Section -->
-        <section id="news">
-            <!-- News content will be injected here by JavaScript -->
-        </section>
+        <p>Welcome to my personal space.</p>
     </main>
 
     <!-- Footer -->
@@ -44,7 +41,5 @@
         </nav>
         <p>© 2021 Krishna Niraula</p>
     </footer>
-
-    <script src="js/scripts.js"></script>
 </body>
 </html>
