--- a/index.html
+++ b/index.html
@@ -42,5 +42,17 @@
         </nav>
         <p>© 2021 Krishna Niraula</p>
     </footer>
+<script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker
+    .register("/service-worker.js")
+    .then(function(registration) {
+      console.log("Service Worker registered with scope:", registration.scope);
+    })
+    .catch(function(error) {
+      console.error("Service Worker registration failed:", error);
+    });
+}
+</script>
 </body>
 </html>
