--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">I'am Krishna</h2>
-                        <p class="about__text">I have been in construction industries in Nepal since 2009</p>           
+                        <p class="about__text">I have been engaged in the construction industry since 2009, with extensive experience across various aspects of construction site management and operations.</p>           
                     </div>                                   
                 </div>
             </section>
