--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <p class="skills__text">Check Linkedin Profile for more info.</p>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bxl-html5 skills__icon'></i>
+                                <i class='bx bx-leaf skills__icon'></i>
                                 <span class="skills__name">Calm</span>
                             </div>
                             <div class="skills__bar skills__html">
@@ -101,7 +101,7 @@
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bxl-css3 skills__icon'></i>
+                                <i class='bx bx-moon skills__icon'></i>
                                 <span class="skills__name">Cool</span>
                             </div>
                             <div class="skills__bar skills__css">
@@ -113,7 +113,7 @@
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bxl-javascript skills__icon' ></i>
+                                <i class='bx bx-network-chart skills__icon'></i>
                                 <span class="skills__name">Friendly</span>
                             </div>
                             <div class="skills__bar skills__js">
@@ -125,7 +125,7 @@
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bxs-paint skills__icon'></i>
+                                <i class='bx bx-briefcase skills_icon'></i>
                                 <span class="skills__name">Professiona</span>
                             </div>
                             <div class="skills__bar skills__ux">
