--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <p class="skills__text">Check Linkedin Profile for more info.</p>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bx-leaf skills__icon'></i>
+                                <i class='bx bxs-leaf skills__icon'></i>
                                 <span class="skills__name">Calm</span>
                             </div>
                             <div class="skills__bar skills__html">
