--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <p class="skills__text">Check Linkedin Profile for more info.</p>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bxs-leaf skills__icon'></i>
+                                <i class='bx bx-cool skills__icon'></i>
                                 <span class="skills__name">Calm</span>
                             </div>
                             <div class="skills__bar skills__html">
@@ -125,8 +125,8 @@
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bx-briefcase skills_icon'></i>
-                                <span class="skills__name">Professiona</span>
+                                <i class='bx bxs-plane-take-off skills__icon'></i>
+                                <span class="skills__name">Professional</span>
                             </div>
                             <div class="skills__bar skills__ux">
                                 
