--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="home__social">
                     <a href="https://www.linkedin.com/in/krishna-niraula-7429b2125/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
                     <a href="https://www.youtube.com/@sankhatro" class="home__social-icon"><i class='bx bxl-youtube' ></i></a>
-                    <a href="https://github.com/Krisssna" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                    <a href="https://github.com/Krisssna🙄" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
                 <div class="home__img">
