--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Krishna</span><br> A simple Human</h1>
 
-                    <a href="#" class="button">Contact</a>
+                    <a href="#" class="button">News are here</a>
                 </div>
 
                 <div class="home__social">
-                    <a href="https://www.linkedin.com/in/krishna-niraula-7429b2125/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="https://www.youtube.com/@sankhatro" class="home__social-icon"><i class='bx bxl-youtube' ></i></a>
-                    <a href="https://www.google.com/alerts/feeds/06313983183609550648/13722836873792678019" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                    <a href="https://krisssna.github.io/RSS-Feed-Reader/feed.html#construction-news" class="home__social-icon"><i class='bx bx-building-house'></i></a>
+                    <a href="https://krisssna.github.io/RSS-Feed-Reader/feed.html#share-market" class="home__social-icon"><i class='bx bx-trending-up'></i></a>
+                    <a href="https://krisssna.github.io/RSS-Feed-Reader/feed.html#nepali-news" class="home__social-icon"><i class='bx bx-current-location' ></i></a>
                 </div>
 
                 <div class="home__img">
