--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
                 </div>
 
                 <div class="home__social">
-                    <a href="https://krisssna.github.io/RSS-Feed-Reader/feed.html#construction-news" class="home__social-icon"><i class='bx bx-building-house'></i></a>
-                    <a href="https://krisssna.github.io/RSS-Feed-Reader/feed.html#share-market" class="home__social-icon"><i class='bx bx-trending-up'></i></a>
-                    <a href="https://krisssna.github.io/RSS-Feed-Reader/feed.html#nepali-news" class="home__social-icon"><i class='bx bx-current-location' ></i></a>
+                    <a href="https://krisssna.github.io/RSS-Feed-Reader/feed.html#construction-news" class="home__social-icon" target="content-frame"><i class='bx bx-building-house'></i></a>
+                    <a href="https://krisssna.github.io/RSS-Feed-Reader/feed.html#share-market" class="home__social-icon" target="content-frame"><i class='bx bx-trending-up'></i></a>
+                    <a href="https://krisssna.github.io/RSS-Feed-Reader/feed.html#nepali-news" class="home__social-icon" target="content-frame"><i class='bx bx-current-location' ></i></a>
                 </div>
+
+                <iframe name="content-frame" style="width: 100%; height: 500px; border: none;"></iframe>
 
                 <div class="home__img">
                     <svg class="home__blob" viewBox="0 0 479 467" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
