--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 
                 <div class="home__social">
                     <a href="https://krisssna.github.io/RSS-Feed-Reader/feed.html#construction-news" class="home__social-icon" target="content-frame"><i class='bx bx-building-house'></i></a>
-                    <span>Construction News</span>
+                    <span style="margin-left: 8px;">Construction News</span>
                     <a href="https://krisssna.github.io/RSS-Feed-Reader/feed.html#share-market" class="home__social-icon" target="content-frame"><i class='bx bx-trending-up'></i></a>
-                    <span>Share Market</span>
+                    <span style="margin-left: 8px;">Share Market</span>
                     <a href="https://krisssna.github.io/RSS-Feed-Reader/feed.html#nepali-news" class="home__social-icon" target="content-frame"><i class='bx bx-current-location' ></i></a>
-                    <span>Nepali News</span>
+                    <span style="margin-left: 8px;">Nepali News</span>
                 </div>
 
                 <iframe name="content-frame" style="width: 100%; height: 500px; border: none;"></iframe>
